err/hydra-device-manager.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyVISA-1.8.egg-info'...
Listing './lib/python3.5/site-packages/devicemanager'...
Compiling './lib/python3.5/site-packages/devicemanager/devicemanager.py'...
***   File "./lib/python3.5/site-packages/devicemanager/devicemanager.py", line 9
    print 'Initialize device manager ...'
                                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/devicemanager/main.py'...
***   File "./lib/python3.5/site-packages/devicemanager/main.py", line 5
    print devicemanager.joke()
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/hydra_device_manager-0.6.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyvisa'...
Listing './lib/python3.5/site-packages/pyvisa/compat'...
Listing './lib/python3.5/site-packages/pyvisa/ctwrapper'...
Listing './lib/python3.5/site-packages/pyvisa/resources'...
Listing './lib/python3.5/site-packages/pyvisa/testsuite'...
Listing './lib/python3.5/site-packages/pyvisa/thirdparty'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
